# mqi_interface

./: PCIP_guidlines.txt  development_plan.md  implementation_guide.md  improved_spec.md  mqi_communicator.patch
mqi_communicator/: .pre-commit-config.yaml  config.yaml  docker-compose.test.yml  mqi_communicator.patch  pyproject.toml
mqi_communicator/src/: container.py  main.py
mqi_communicator/src/controllers/: application.py  interfaces.py  lifecycle_manager.py
mqi_communicator/src/domain/: interfaces.py  models.py  repositories.py  system_monitor.py  task_scheduler.py  workflow_orchestrator.py
mqi_communicator/src/infrastructure/: config.py  connection.py  executors.py  file_system.py  json_encoder.py  repositories.py  resilience.py  state.py
mqi_communicator/src/services/: case_service.py  interfaces.py  job_service.py  resource_service.py  transfer_service.py
mqi_communicator/tests/e2e/: test_workflow.py
mqi_communicator/tests/integration/: test_connection_integration.py  test_repository_integration.py  test_service_integration.py
mqi_communicator/tests/unit/: test_container.py
mqi_communicator/tests/unit/controllers/: test_application.py  test_lifecycle_manager.py
mqi_communicator/tests/unit/domain/: test_models.py  test_system_monitor.py  test_task_scheduler.py  test_workflow_orchestrator.py
mqi_communicator/tests/unit/infrastructure/: test_config_manager.py  test_connection.py  test_executors.py  test_repositories.py  test_resilience.py  test_state_manager.py
mqi_communicator/tests/unit/services/: test_case_service.py  test_job_service.py  (+2 more)
